Fix 401 Unauthorized errors by hardening SecurityConfig and updating JwtFilter